# Othello

./: CMakeLists.txt  Hlabel.cpp  Hlabel.h  README.md  ma_fenetre.cpp  ma_fenetre.h  main.cpp  othelloWindow.cpp  othelloWindow.h
cpp/: ClickableLabel.cpp  Game.cpp  GameSystem.cpp  GameWindow.cpp  HomeWindow.cpp  Othellier.cpp  ai.cpp  ia.cpp  main.cpp  utils.cpp
headers/: ClickableLabel.h  Game.h  GameSystem.h  GameWindow.h  HomeWindow.h  Othellier.h  ai.h  ia.h  utils.h
